36 enable automatic device discovery for arp spoofing (#41)
Co-authored-by: Smookerzz <ziadbougrine@gmail.com>